--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ form.sign-in-form {
 .input-field {
   max-width: 380px;
   width: 100%;
-  background-color: #f0f0f0;
+  background-color: transparent;
   margin: 10px 0;
   height: 55px;
   border-radius: .3rem;
@@ -90,11 +90,14 @@ form.sign-in-form {
 .input-field input {
   background: none;
   outline: none;
-  border: none;
+  border-color: #280e19;
   line-height: 1;
   font-weight: 600;
   font-size: 1rem;
   color: #333;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 .input-field input::placeholder {
@@ -134,12 +137,12 @@ form.sign-in-form {
 }
 
 .btn {
-  width: 380px;
+  width: 330px;
   background-color: #D16E99;
   border: none;
   outline: none;
   height: 49px;
-  border-radius: .3rem;
+  border-radius: .0rem;
   /* display: block; */
   color: #fff;
   text-transform: uppercase;
@@ -147,10 +150,12 @@ form.sign-in-form {
   margin: 10px 0;
   cursor: pointer;
   transition: 0.5s;
+  margin-left: 5vw;
+  margin-top: 5vh;
 }
 
 .btn.transparent:hover {
-  background-color: white;
+  background-color: #000;
   color: #D16E99;
 }
 
@@ -174,8 +179,9 @@ form.sign-in-form {
   width: 2000px;
   top: -10%;
   right: 48%;
-  transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #D16E99 0%, #FEF3F9 100%);
+  transform: translateY(-10%);
+  background-image: url("section.png");
+  background-size: cover;
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
@@ -207,7 +213,7 @@ form.sign-in-form {
 }
 
 .panel .content {
-  color: #fff;
+  color: #000;
   transition: transform 0.9s ease-in-out;
   transition-delay: 0.6s;
 }
@@ -226,7 +232,7 @@ form.sign-in-form {
 .btn.transparent {
   margin: 0;
   background: none;
-  border: 2px solid #fff;
+  border: 2px solid #000;
   width: 130px;
   height: 41px;
   font-weight: 600;
